src/tests/evaluation_error/identifier_not_found/snapshots/monkey_interpreter__tests__evaluation_error__identifier_not_found__test_identifier_not_found_case_10_syntax_analysis.snap
---
source: src/tests/evaluation_error/identifier_not_found/mod.rs
expression: abstract_syntax_tree
---
[
    Expression {
        expression: NotPrefix {
            right_hand: Identifier {
                identifier: "undefined_boolean",
            },
        },
    },
]
