src/tests/evaluation_error/identifier_not_found/snapshots/monkey_interpreter__tests__evaluation_error__identifier_not_found__test_identifier_not_found_case_2_lexical_analysis.snap
---
source: src/tests/evaluation_error/identifier_not_found/mod.rs
expression: tokens
---
[
    Let,
    Identifier {
        literal: "is_directory",
    },
    Assign,
    False,
    SemiColon,
    Identifier {
        literal: "is_file",
    },
]
