src/tests/evaluation_error/identifier_not_found/snapshots/monkey_interpreter__tests__evaluation_error__identifier_not_found__test_identifier_not_found_case_2_syntax_analysis.snap
---
source: src/tests/evaluation_error/identifier_not_found/mod.rs
expression: abstract_syntax_tree
---
[
    Statement {
        statement: Let {
            identifier: "is_directory",
            expression: Boolean {
                literal: false,
            },
        },
    },
    Expression {
        expression: Identifier {
            identifier: "is_file",
        },
    },
]
