src/tests/evaluation_error/identifier_not_found/snapshots/monkey_interpreter__tests__evaluation_error__identifier_not_found__test_identifier_not_found_case_3_syntax_analysis.snap
---
source: src/tests/evaluation_error/identifier_not_found/mod.rs
expression: abstract_syntax_tree
---
[
    Statement {
        statement: Let {
            identifier: "a",
            expression: Integer {
                literal: 5,
            },
        },
    },
    Expression {
        expression: Infix {
            left_hand: Identifier {
                identifier: "a",
            },
            operator: Plus,
            right_hand: Identifier {
                identifier: "b",
            },
        },
    },
]
